@@ -10,6 +10,8 @@ Add new items to top.
   Submitted by tigertron
   Src/Languages/Bulgarian: MergeBulgarian.rc
   Docs/Users/Languages: Readme-Bulgarian.txt
+ PATCH: [ 1650043 ] Convert CDiffWrapper to use CompareOptions
+  Src: CompareOptions.cpp CompareOptions.h DiffWrapper.cpp DiffWrapper.h
 
 2007-01-31 Kimmo
  PATCH: [ 1648182 ] Separate Compare options from DiffWrapper
